SD-1895 Add GET Actions and handle request for TerminalCall